- Make the writeLavaanNullCode function to write a null model
- Add the indicatorLab, factorLab, and auxiliary arguments in simModel function and SimModel class
- Make the run-SimModel method to be able to select some variables to analyze
- Fix a bug in the imposeMissing, summary-SimSet, miPool, and createData function
- Make runMI be able to select some variables as auxiliary variables
- Add extract method to select a part of the SimMatrix, SimVector, and SimSet.
- Fix the help page for simModel and add the help page for the extract method
- Change SimSet and SimMisspec correlation arguments to have leading R (PH -> RPH, PS -> RPS, TD -> RTD, TE -> RTE)
- Allow setting the overall variance as 0 to mean no residual or measurement errors.
- Changing how to handle MAR to threshold method
- Adding two examples on auxiliary variable/MAR and single-indicator factor
- Make the miPoolVector function public and make the manual page.

simsem, Version 0.0-9 03/11/12
- Adding anova method for nested and nonnested comparison and its help page.
- Changing code in run(SimSet), run(SimMisspec), run.misspecified to be more efficient by adding fillParam function
- Change the get.keywords function to provide only necessary code (do not provide different inputs for different in lower or upper cases)
- Make match.keyword code to be case-insensitive
- Adding PS, TE, TD, PH, TH for covariance matrix in SimSet and MatrixSet classes. The reassign.names, constrain.matrices, all SimSet and SimMisspec constructors, reduce.matrices, expand.matrices, create.free.parameters are changed accordingly.
- The help page of SimSet-class, SimMisspec-class, and all of their constructors.
- Debug miPool.R that has a problem when a matrix or a vector contains only one element.
- Debug imposeMissing.R that has a problem when there is no covariate.

simsem, Version 0.0-9.1 03/31/12
- Fixing the bug that free the exogenous factor correlation when we actually fixed it.

