@@ -1,8 +1,8 @@
 Package: simsem
 Type: Package
 Title: SIMulated Structural Equation Modeling package.
-Version: 0.0-9
-Date: 2012-03-11
+Version: 0.0-10
+Date: 2012-03-31
 Author@R: c(person("Sunthud", "Pornprasertmanit", email ="psunthud@ku.edu"),
 			person("Patrick", "Miller", email ="patr1ckm@ku.edu"),
 			person("Alex", "Schoemann", email ="schoemann@ku.edu"))
@@ -15,4 +15,3 @@ Suggests: parallel, Amelia, copula
 Description: This package can be used to generate data using the structural equation modeling framework. This package is tailored to use those simulated data for various purposes, such as model fit evaluation, power analysis, or missing data handling and planning.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2012-03-11 04:51:44 UTC; Sunthud
