@@ -92,7 +92,7 @@ createData <- function(paramSet, n, object, dataOnly) {
 		return(Data)
 	} else {
 		if(is.null(misspec)) misspec <- new("NullRSet")
-		out <- new("SimDataOut", modelType=object@modelType, data=Data, param=create.free.parameters(object@param), paramOut=param, misspecOut=misspec, equalCon=object@equalCon)
+		out <- new("SimDataOut", modelType=object@modelType, data=Data, param=create.free.parameters(object@param), paramOut=param, misspecOut=misspec, equalCon=object@equalCon, n=n)
 		return(out)
 	}
 }
