@@ -24,6 +24,7 @@ Objects can be created by \code{\link{simResult}}. It can also be called from th
 	\item{\code{FMI1}:}{Fraction Missing Method 1.}
 	\item{\code{FMI2}:}{Fraction Missing Method 2.}
 	\item{\code{stdCoef}:}{Standardized coefficients from each replication}
+	\item{\code{n}:}{Sample size of the analyzed data.}
   }
 }
 \section{Methods}{
