@@ -12,10 +12,10 @@ This package can be used to generate data using the structural equation modeling
 \tabular{ll}{
 Package: \tab simsem\cr
 Type: \tab Package\cr
-Version: \tab 0.0.9\cr
+Version: \tab 0.0.10\cr
 Depends: \tab R(>= 2.14), methods, lavaan, MASS\cr
 Suggests: \tab parallel, Amelia, copula\cr
-Date: \tab 2011-03-11\cr
+Date: \tab 2011-03-31\cr
 License: \tab GPL (>= 2)\cr
 LazyLoad: \tab yes\cr
 }
